<resources>
    <string name="app_name">Quiz App</string>
    <string name="quizer">Quizer</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="login">LOGIN</string>
    <string name="cancel">CANCEL</string>
    <string name="i_am_a_new_user">You are a new user.Register?</string>
    <string name="title_activity_content">ContentActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="user_login">USER LOGIN</string>
    <string name="user_registration">USER REGISTRATION</string>
    <string name="enter_your_user_name">Enter Your User Name</string>
    <string name="submit">SUBMIT</string>
    <string name="already_have_a_account">Already Have A Account</string>
    <string name="logout">Logout</string>
    <string name="change_username">Change Username</string>
    <string name="new_username">New Username</string>
    <string name="change">CHANGE</string>
    <string name="start">START</string>
    <string name="start_quiz">START QUIZ</string>
    <string name="default_question">Default Question</string>
    <string name="answer_a">ANSWER A</string>
    <string name="answer_b">ANSWER B</string>
    <string name="answer_c">ANSWER C</string>
    <string name="answer_d">ANSWER D</string>
    <string name="_10_questions">10 Questions</string>
    <string name="_20_questions">20 Questions</string>
    <string name="_30_questions">30 Questions</string>
    <string name="_40_questions">40 Questions</string>
    <string name="_0_0">0 / 0</string>
    <string name="score_0">Score : 0</string>
    <string name="_10">10</string>
    <string name="correct_0">Correct : 0</string>
    <string name="wrong_0">Wrong : 0</string>
    <string name="set_question_duration">Set Question Duration</string>
    <string name="total_score">Total Score</string>
    <string name="total_questions_played">Total Questions Played</string>
    <string name="total_right_answers">Total Right Answers</string>
    <string name="save">SAVE</string>
    <string name="privacy_policy">Privacy Policy</string>
</resources>
