<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/btn">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="#FCFBFB"
        android:textSize="30sp"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/start_quiz"
        android:layout_margin="40dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/start"
        android:textSize="20sp"
        android:textColor="#F8F5F5"
        android:textStyle="bold"
        android:padding="20dp"
        android:background="@drawable/btn2"
        android:id="@+id/start_quiz"
        android:layout_marginBottom="30dp"/>
    
    <CheckBox
        android:id="@+id/one"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/_10_questions"
        android:layout_margin="5dp"
        android:textColor="#f8f4f4"
        android:textSize="20sp"
        android:textStyle="bold"
        />

    <CheckBox
        android:id="@+id/two"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/_20_questions"
        android:layout_margin="5dp"
        android:textColor="#f8f4f4"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <CheckBox
        android:id="@+id/three"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/_30_questions"
        android:layout_margin="5dp"
        android:textColor="#f8f4f4"
        android:textSize="20sp"
        android:textStyle="bold"/>

</LinearLayout>