<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/logout"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_change_username"
        android:orderInCategory="100"
        android:title="@string/change_username"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_privacy_policy"
        android:orderInCategory="100"
        android:title="@string/privacy_policy"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_show"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:icon="@drawable/ic_assignment_turned_in_black_24dp"
        tools:ignore="AlwaysShowAction,MenuTitle" />
</menu>
