<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/change_username"
        android:textColor="#86DA25"
        android:textStyle="bold"
        android:textSize="25sp"/>

    <EditText
        android:id="@+id/edit_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#068999"
        android:hint="@string/new_username"
        tools:ignore="Autofill,TextFields" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:textColor="#FFFEFE"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/change"
        android:padding="10dp"
        android:background="#2196F3"
        android:id="@+id/change"/>



</LinearLayout>