<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".QuizActivity"
    android:orientation="vertical"
    android:background="#4604BB">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="UselessLeaf"
        android:layout_gravity="center"
        >

        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-6494979048790657/2420754522"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true">
        </com.google.android.gms.ads.AdView>

    </RelativeLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:attr/progressBarStyleHorizontal"
        android:indeterminate="false"
        android:max="10"
        android:maxHeight="50dp"
        android:maxWidth="200dp"
        android:progress="0"
        android:layout_margin="10dp"/>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardBackgroundColor="#2DF1DF"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:textStyle="bold"
                android:textColor="#f8f4f4"
                android:textSize="20sp"
                android:text="@string/default_question"
                android:layout_gravity="center"
                android:gravity="center"
                android:id="@+id/question_textview"
                />

            <Button
                android:layout_width="366dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:background="@drawable/options"
                android:textSize="15sp"
                android:textColor="#f8f4f4"
                android:padding="10dp"
                android:text="@string/answer_a"
                android:id="@+id/btn_a"
                android:onClick="onBtnA"
                />

            <Button
                android:layout_width="366dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:background="@drawable/options"
                android:textSize="15sp"
                android:textColor="#f8f4f4"
                android:padding="10dp"
                android:text="@string/answer_b"
                android:id="@+id/btn_b"
                android:onClick="onBtnB"
                />

            <Button
                android:layout_width="366dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:background="@drawable/options"
                android:textSize="15sp"
                android:textColor="#f8f4f4"
                android:padding="10dp"
                android:text="@string/answer_c"
                android:id="@+id/btn_c"
                android:onClick="onBtnC"
                />

            <Button
                android:layout_width="366dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:background="@drawable/options"
                android:textSize="15sp"
                android:textColor="#f8f4f4"
                android:padding="10dp"
                android:text="@string/answer_d"
                android:id="@+id/btn_d"
                android:onClick="onBtnD"
                />

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/question_counter"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:layout_margin="20dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="#f4f8f8"
        android:text="@string/_0_0"/>

</LinearLayout>